test/simple/ill-typed/singletype_module.caprice
(* TEST
  include refutable;
*)


let M : sig 
  val t : singletype { i : int | i > 0 }
  val f : t -> t
end = struct
  let t = int (* ERROR: is not only positive ints *)
  let f = fun x -> x
end
